crates/pixtuoid/tests/snapshots/layout_golden__room_walls_open_plan_seed2.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 91
expression: l.room_walls
---
[
    Vertical {
        x: 56,
        y0: 36,
        y1: 50,
    },
    Vertical {
        x: 56,
        y0: 64,
        y1: 78,
    },
    Horizontal {
        y: 78,
        x0: 0,
        x1: 26,
    },
    Horizontal {
        y: 78,
        x0: 40,
        x1: 56,
    },
]
