crates/pixtuoid/tests/snapshots/layout_golden__waypoints_192x160.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.waypoints
---
[
    Waypoint {
        pos: Point {
            x: 96,
            y: 51,
        },
        kind: Couch,
        facing: North,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 102,
            y: 51,
        },
        kind: Couch,
        facing: North,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 108,
            y: 51,
        },
        kind: Couch,
        facing: North,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 26,
            y: 140,
        },
        kind: Pantry,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 106,
            y: 140,
        },
        kind: PhoneBooth,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 80,
            y: 90,
        },
        kind: StandingDesk,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 132,
            y: 122,
        },
        kind: PhoneBooth,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 60,
            y: 152,
        },
        kind: VendingMachine,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 182,
            y: 155,
        },
        kind: Printer,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 20,
            y: 59,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 26,
            y: 59,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 32,
            y: 59,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 20,
            y: 92,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 26,
            y: 92,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 32,
            y: 92,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 17,
            y: 75,
        },
        kind: MeetingChair,
        facing: East,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 35,
            y: 75,
        },
        kind: MeetingChair,
        facing: West,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 13,
            y: 126,
        },
        kind: Island,
        facing: East,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 39,
            y: 126,
        },
        kind: Island,
        facing: West,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 21,
            y: 126,
        },
        kind: Island,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 31,
            y: 126,
        },
        kind: Island,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 4,
            y: 120,
        },
        kind: SnackShelf,
        facing: West,
        room_id: None,
    },
]
