crates/pixtuoid/tests/snapshots/layout_golden__waypoints_open_plan_seed2.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.waypoints
---
[
    Waypoint {
        pos: Point {
            x: 87,
            y: 39,
        },
        kind: Couch,
        facing: North,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 93,
            y: 39,
        },
        kind: Couch,
        facing: North,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 99,
            y: 39,
        },
        kind: Couch,
        facing: North,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 28,
            y: 105,
        },
        kind: Pantry,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 22,
            y: 44,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 28,
            y: 44,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 34,
            y: 44,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 22,
            y: 68,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 28,
            y: 68,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 34,
            y: 68,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 19,
            y: 56,
        },
        kind: MeetingChair,
        facing: East,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 37,
            y: 56,
        },
        kind: MeetingChair,
        facing: West,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 15,
            y: 92,
        },
        kind: Island,
        facing: East,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 41,
            y: 92,
        },
        kind: Island,
        facing: West,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 23,
            y: 92,
        },
        kind: Island,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 33,
            y: 92,
        },
        kind: Island,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 4,
            y: 91,
        },
        kind: SnackShelf,
        facing: West,
        room_id: None,
    },
]
